--- a/about.html
+++ b/about.html
@@ -1,3 +1,3 @@
 <h1>Cac ban nho subscribe cho anh HoangDT</h1>
 
-<p>Anh Hoang ra clip vao toi thu 3 ahihi</p>
+<p>Anh Hoang ra clip vao toi thu 3 ahihi, co y de conflict</p>
